# mcstas-readout-master

./: .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  PLAN.md  ParameterPublisher.md  README.md  architecture.md  conanfile.py  layout_plan.md  pyproject.toml  run_tests.sh
.github/workflows/: docs.yml  main.yml  wheels.yml
cmake/: check.cmake  conan_provider.cmake  readout-hdf5.cmake  version.py
devel/: check_install.sh
docs/: Doxyfile.in  architecture.md  cli.md  collector-files.md  examples.md  extract_comp_docs.py  index.md  install.md  integration.md  python.md
examples/: readout_example.instr  replay_publisher.py  run_example.sh
lib/: Array.h  CMakeLists.txt  CollectorClass.cpp  CollectorClass.h  CollectorStar.cpp  CollectorStar.h  DiscreteAfter.h  DiscreteWhile.h  IndexSampler.h  Readout.h  ReadoutClass.cpp  Readout_merge.cpp  RecordBuffer.h  Sender.cpp  Sender.h  SenderConfigs.cpp  SenderConfigs.h  Structs.h  TypeDescriptionParser.cpp  TypeDescriptionParser.h  cluon-complete.hpp  collector.cpp  collector.h  enums.h  hdf_interface.cpp  hdf_interface.h  reader.h  readout_collector.cpp  readout_collector.h  readout_discrete.cpp  readout_discrete.h  readout_type_descriptions.cpp  replay.cpp  replay.h  streamer.h
lib/ctream/: algorithms.hpp
python/_readout_core/: __init__.py
python/mcstas_readout/: __init__.py  _lib.py  _paths.py  combine.py  exceptions.py  replay.py
readout_core/: CMakeLists.txt
readout_core/app_combine/: main.cpp
readout_core/app_config/: main.cpp
readout_core/app_replay/: main.cpp
readout_core/cmake/: ReadoutConfig.cmake.in  readout_config.h.in
readout_core/components/: CollectorBM0.comp  CollectorBM2.comp  CollectorBMI.comp  CollectorCAEN.comp  CollectorCDT.comp  CollectorTTLMonitor.comp  CollectorVMM3.comp  ReadoutCAEN.comp  ReadoutDiscreteCAEN.comp  ReadoutTTLMonitor.comp  lib-readout.c
readout_core/include/: CollectorClass.h  Readout.h  ReadoutClass.h  Sender.h  SenderConfigs.h  Structs.h  TypeDescriptionParser.h  cluon-complete.hpp  efu_time.h  enums.h  hdf_interface.h  reader.h  readout_capi.h  readout_collector.h  readout_discrete.h  readout_orig.h  readout_structs.h  readout_type_descriptions.h  replay.h  writer.h
readout_core/src/: Array.cpp  CollectorClass.cpp  DiscreteWhile.h  IndexSampler.h  ReadoutClass.cpp  Sender.cpp  TypeDescriptionParser.cpp  enums.cpp  hdf_interface.cpp  main.cpp  readout_capi.cpp  readout_collector.cpp  readout_orig.cpp  replay.cpp  tester.cpp
readout_core/src/ctream/: algorithms.hpp  ctream.hpp  rng.hpp  sampler.hpp  utilities.hpp
share/Readout/: CollectCAEN.comp  CollectorBM0.comp  CollectorBMI.comp  CollectorCAEN.comp  CollectorTTLMonitor.comp  CollectorVMM3.comp  ReadoutCAEN.comp  ReadoutDiscreteCAEN.comp  ReadoutTTLMonitor.comp  lib-readout.c  lib-readout.h
src/: CMakeLists.txt
src/combine/: CMakeLists.txt
src/replay/: main.cpp
test/: CMakeLists.txt  array_test.cpp  capi_test.cpp  collector_star_test.cpp  collector_test.cpp  combine_test.cpp  discrete_test.cpp  enums_test.cpp  readout_all_types_test.cpp  replay_test.cpp  sender_configs_test.cpp  star_collector_test.cpp  test_integration.sh  test_utils.h  type_description_test.cpp  weight_to_event_test.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: main.c
tests/: conftest.py  test_compile_components.py  test_mpi_collect.py  test_mpi_diag.c  test_python_api.py  test_run_components.py
